--- a/res/layout/activity_videotest.xml
+++ b/res/layout/activity_videotest.xml
@@ -7,7 +7,7 @@
     android:padding="0dp" >
 
     <LinearLayout
-        android:id="@+id/video_head"
+        android:id="@+id/video_headll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -48,71 +48,108 @@
             android:textColor="@color/black" />
     </LinearLayout>
 
-    <com.wnc.srtlearn.modules.video.MyVideoView
-        android:id="@+id/sv"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="240dp" />
+        android:layout_height="wrap_content" >
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/sv" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/imgbtn_play"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="3dp"
-            android:background="@drawable/bfq_play"
-            android:scaleType="fitXY" />
-
-        <ImageButton
-            android:id="@+id/imgbutton_replay_custom"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/bfq_replay"
-            android:scaleType="fitXY" />
+        <com.wnc.srtlearn.modules.video.MyVideoView
+            android:id="@+id/sv"
+            android:layout_width="match_parent"
+            android:layout_height="240dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true" />
 
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/srtinfoTv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_alignBottom="@+id/sv"
+            android:layout_alignRight="@+id/sv"
+            android:background="#00000000"
+            android:gravity="center"
+            android:text="text"
+            android:textSize="20dp"
+            android:textColor="@+color/black" />
+    </RelativeLayout>
 
-        <ImageButton
-            android:id="@+id/imgbutton_replay_setting"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/bfq_setting"
-            android:gravity="right"
-            android:scaleType="fitXY" />
+    <LinearLayout
+        android:id="@+id/video_operLl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/sv" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <ImageButton
+                android:id="@+id/imgbtn_play"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="3dp"
+                android:background="@drawable/bfq_play"
+                android:scaleType="fitXY" />
+
+            <ImageButton
+                android:id="@+id/imgbutton_replay_custom"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/bfq_replay"
+                android:scaleType="fitXY" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/imgbutton_replay_setting"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/bfq_setting"
+                android:gravity="right"
+                android:scaleType="fitXY" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/veng_tv"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:maxLines="3"
+                android:singleLine="false"
+                android:textColor="@color/purple"
+                android:textSize="@dimen/dimen_15_dip" />
+
+            <TextView
+                android:id="@+id/vchs_tv"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:maxLines="3"
+                android:singleLine="false"
+                android:textColor="@color/purple"
+                android:textSize="@dimen/dimen_15_dip" />
+        </LinearLayout>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/veng_tv"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:maxLines="3"
-        android:singleLine="false"
-        android:textColor="@color/purple"
-        android:textSize="@dimen/dimen_15_dip" />
-
-    <TextView
-        android:id="@+id/vchs_tv"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:maxLines="3"
-        android:singleLine="false"
-        android:textColor="@color/purple"
-        android:textSize="@dimen/dimen_15_dip" />
 
 </LinearLayout>
