添加电影海报,并写入主界面

--- a/res/layout/activity_bihua.xml
+++ b/res/layout/activity_bihua.xml
@@ -31,26 +31,26 @@
             android:id="@+id/etHanzi_bh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
             android:layout_gravity="center"
-            android:text="树"
-            android:ems="10" >
+            android:layout_marginLeft="10dp"
+            android:ems="10"
+            android:gravity="center"
+            android:text="树" >
 
             <requestFocus />
         </EditText>
     </LinearLayout>
 
-        <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
-        
+
         <Gallery
-        android:id="@+id/gallery"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:spacing="20dp"/>
-</LinearLayout>
+            android:id="@+id/gallery"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:spacing="20dp" />
+    </LinearLayout>
 
 </LinearLayout>
