--- a/res/layout/activity_videotest.xml
+++ b/res/layout/activity_videotest.xml
@@ -6,48 +6,6 @@
     android:orientation="vertical"
     android:padding="0dp" >
 
-    <LinearLayout
-        android:id="@+id/video_headll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone" >
-
-        <ImageButton
-            android:id="@+id/imgbtn_fullscreen"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="3dp"
-            android:background="@drawable/full_screen"
-            android:scaleType="fitXY" />
-
-        <Button
-            android:id="@+id/button_onlyone"
-            android:layout_width="60dp"
-            android:layout_height="@dimen/dimen_40_dip"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/dimen_5_dip"
-            android:background="@drawable/main_add_expense_quickly_new"
-            android:gravity="center"
-            android:shadowColor="@color/black"
-            android:shadowDx="0.0"
-            android:shadowDy="2.0"
-            android:shadowRadius="1.0"
-            android:text="设置"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_12_dip"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tipTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:text="视频播放器SurfaceView实例"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -59,6 +17,49 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true" />
 
+        <LinearLayout
+            android:id="@+id/video_headll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+             android:background="#00333333"
+            >
+
+            <ImageButton
+                android:id="@+id/imgbtn_fullscreen"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="3dp"
+                android:background="@drawable/full_screen"
+                android:scaleType="fitXY" />
+
+            <Button
+                android:id="@+id/button_onlyone"
+                android:layout_width="60dp"
+                android:layout_height="@dimen/dimen_40_dip"
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/dimen_5_dip"
+                android:background="@drawable/main_add_expense_quickly_new"
+                android:gravity="center"
+                android:shadowColor="@color/black"
+                android:shadowDx="0.0"
+                android:shadowDy="2.0"
+                android:shadowRadius="1.0"
+                android:text="设置"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_12_dip"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tipTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:text="视频播放器SurfaceView实例"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/srtinfoTv"
             android:layout_width="match_parent"
@@ -68,8 +69,8 @@
             android:background="#00000000"
             android:gravity="center"
             android:text="text"
-            android:textSize="20dp"
-            android:textColor="@+color/black" />
+            android:textColor="@+color/black"
+            android:textSize="20dp" />
     </RelativeLayout>
 
     <LinearLayout
