--- a/res/layout/activity_videotest.xml
+++ b/res/layout/activity_videotest.xml
@@ -21,56 +21,75 @@
             android:id="@+id/video_headll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-             android:background="#00333333"
-            >
+            android:background="#33000000"
+            android:orientation="horizontal" >
 
             <ImageButton
                 android:id="@+id/imgbtn_fullscreen"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_marginLeft="3dp"
+                android:layout_gravity="center"
                 android:background="@drawable/full_screen"
                 android:scaleType="fitXY" />
-
-            <Button
-                android:id="@+id/button_onlyone"
-                android:layout_width="60dp"
-                android:layout_height="@dimen/dimen_40_dip"
-                android:layout_gravity="center"
-                android:layout_marginRight="@dimen/dimen_5_dip"
-                android:background="@drawable/main_add_expense_quickly_new"
-                android:gravity="center"
-                android:shadowColor="@color/black"
-                android:shadowDx="0.0"
-                android:shadowDy="2.0"
-                android:shadowRadius="1.0"
-                android:text="设置"
-                android:textColor="@color/white"
-                android:textSize="@dimen/dimen_12_dip"
-                android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/tipTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:text="视频播放器SurfaceView实例"
+                android:text=""
                 android:textColor="@color/black" />
+            
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+            
+            <Button
+                android:id="@+id/videomenuBt"
+                android:layout_width="60dp"
+                android:layout_height="@dimen/dimen_40_dip"
+                android:background="#00000000"
+                android:text="菜单"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_12_dip"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/srtinfoTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/sv"
-            android:layout_alignRight="@+id/sv"
+            android:layout_above="@+id/video_bottomll2"
+            android:layout_alignRight="@+id/video_bottomll2"
             android:background="#00000000"
             android:gravity="center"
             android:text="text"
             android:textColor="@+color/black"
             android:textSize="20dp" />
+
+        <LinearLayout
+            android:id="@+id/video_bottomll2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#33000000"
+            android:orientation="horizontal" 
+            android:layout_alignBottom="@+id/sv"
+	        android:layout_alignRight="@+id/sv">
+	        <SeekBar
+	            android:id="@+id/seekBar"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:focusable="true"
+	            android:maxHeight="4.0dip"
+	            android:minHeight="4.0dip"
+	            android:paddingLeft="16.0dip"
+	            android:paddingRight="16.0dip"
+	            android:progressDrawable="@drawable/po_seekbar"
+	            android:thumb="@drawable/seekbar_thumb" />
+        </LinearLayout>
     </RelativeLayout>
 
     <LinearLayout
@@ -78,18 +97,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/sv" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
