--- a/res/layout/activity_videotest.xml
+++ b/res/layout/activity_videotest.xml
@@ -17,8 +17,34 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true" />
 
+        
         <LinearLayout
-            android:id="@+id/video_headll"
+            android:id="@+id/video_floatll2"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+			android:gravity="center"
+            android:layout_alignRight="@+id/video_bottomll2"
+            android:layout_centerVertical="true"
+            android:background="#33000000"
+            android:orientation="vertical" >
+
+            <ImageButton
+                android:id="@+id/imgbutton_float_replay"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/bfq_replay"
+                android:scaleType="fitXY" />
+            <ImageButton
+                android:id="@+id/imgbutton_float_zimu"
+                android:layout_marginTop="10dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/zimu"
+                android:scaleType="fitXY" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/video_headll2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#33000000"
@@ -26,35 +52,37 @@
 
             <ImageButton
                 android:id="@+id/imgbtn_fullscreen"
-                android:layout_width="20dp"
+                android:layout_width="35dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="3dp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="3dp"
                 android:background="@drawable/full_screen"
                 android:scaleType="fitXY" />
+
             <TextView
                 android:id="@+id/tipTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
                 android:text=""
-                android:textColor="@color/black" />
-            
+                android:textColor="@color/white" />
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
-            
+
             <Button
                 android:id="@+id/videomenuBt"
                 android:layout_width="60dp"
                 android:layout_height="@dimen/dimen_40_dip"
-                android:background="#00000000"
-                android:text="菜单"
                 android:layout_gravity="center"
+                android:background="#00000000"
+                android:text="菜 单"
                 android:textColor="@color/white"
-                android:textSize="@dimen/dimen_12_dip"
+                android:textSize="@dimen/dimen_15_dip"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -67,28 +95,51 @@
             android:background="#00000000"
             android:gravity="center"
             android:text="text"
-            android:textColor="@+color/black"
+            android:textColor="@+color/white"
             android:textSize="20dp" />
 
         <LinearLayout
             android:id="@+id/video_bottomll2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#33000000"
-            android:orientation="horizontal" 
             android:layout_alignBottom="@+id/sv"
-	        android:layout_alignRight="@+id/sv">
-	        <SeekBar
-	            android:id="@+id/seekBar"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:focusable="true"
-	            android:maxHeight="4.0dip"
-	            android:minHeight="4.0dip"
-	            android:paddingLeft="16.0dip"
-	            android:paddingRight="16.0dip"
-	            android:progressDrawable="@drawable/po_seekbar"
-	            android:thumb="@drawable/seekbar_thumb" />
+            android:layout_alignRight="@+id/sv"
+            android:background="#33000000"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/curtime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:text="10:05"
+                android:textColor="@color/black" />
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:focusable="true"
+                android:maxHeight="4.0dip"
+                android:minHeight="4.0dip"
+                android:paddingLeft="16.0dip"
+                android:paddingRight="16.0dip"
+                android:progressDrawable="@drawable/po_seekbar"
+                android:thumb="@drawable/seekbar_thumb" />
+
+            <TextView
+                android:id="@+id/totaltime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="3dp"
+                android:text="10:05"
+                android:textColor="@color/black" />
         </LinearLayout>
     </RelativeLayout>
 
