--- a/res/layout/activity_videotest.xml
+++ b/res/layout/activity_videotest.xml
@@ -41,6 +41,13 @@
                 android:layout_height="30dp"
                 android:background="@drawable/zimu"
                 android:scaleType="fitXY" />
+            <ImageButton
+                android:id="@+id/imgbutton_float_favorite"
+                android:layout_marginTop="10dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/favorite256"
+                android:scaleType="fitXY" />
         </LinearLayout>
 
         <LinearLayout
@@ -90,8 +97,9 @@
             android:id="@+id/srtinfoTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/video_bottomll2"
+            android:layout_alignBottom="@+id/video_bottomll2"
             android:layout_alignRight="@+id/video_bottomll2"
+            android:layout_marginBottom="10dp"
             android:background="#00000000"
             android:gravity="center"
             android:text="text"
@@ -111,10 +119,9 @@
                 android:id="@+id/curtime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"
+                android:layout_marginRight="2dp"
                 android:text="10:05"
                 android:textColor="@color/black" />
 
@@ -135,9 +142,9 @@
                 android:id="@+id/totaltime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="3dp"
                 android:text="10:05"
                 android:textColor="@color/black" />
         </LinearLayout>
