--- a/res/layout/common_wdailog.xml
+++ b/res/layout/common_wdailog.xml
@@ -1,29 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
 
+    <TextView
+        android:id="@+id/tvEpidoseInfo"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="false"
+        android:textColor="@color/yellow"
+        android:textSize="20dip" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tvEpidoseInfo"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/yellow"
-            android:singleLine="false"
-            android:textSize="20dip" />
+        android:layout_alignLeft="@+id/tvEpidoseInfo"
+        android:layout_below="@+id/tvEpidoseInfo"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/tvTimeLine"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/yellow"
             android:textSize="20dip" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageButton
+                android:id="@+id/imgbtn_PlayVoice"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/bfq_voice"
+                android:scaleType="fitXY" />
+        
+        <ImageButton
+                android:id="@+id/imgbtn_ToContext"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/icon_context"
+                android:scaleType="fitXY" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
