--- a/res/layout/topic_tip_wdailog.xml
+++ b/res/layout/topic_tip_wdailog.xml
@@ -8,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:singleLine="false"
-        android:textColor="@color/yellow"
+        android:textColor="@color/white"
         android:textSize="20dip" />
 
 </RelativeLayout>
