--- a/res/layout/activity_srt.xml
+++ b/res/layout/activity_srt.xml
@@ -173,7 +173,7 @@
                 android:layout_alignTop="@+id/topicTipBg"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="3"
+                android:text=""
                 android:textColor="@+color/white"
                 android:textSize="14dp"
                 android:textStyle="bold" />
