--- a/res/layout/activity_srtsearch.xml
+++ b/res/layout/activity_srtsearch.xml
@@ -26,22 +26,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="请输入单词进行搜索       " />
-
-        <Button
+		
+         <Button
             android:id="@+id/btn_srtsearch"
-            android:layout_width="70dp"
-            android:layout_height="@dimen/dimen_60_dip"
+            android:layout_width="@dimen/dimen_30_dip"
+            android:layout_height="@dimen/dimen_30_dip"
+            android:layout_gravity="right|center"
+            android:layout_marginLeft="@dimen/dimen_15_dip"
+            android:background="@drawable/search" />
+         
+         <Button
+            android:id="@+id/btn_srtsearch_clear"
+            android:layout_width="@dimen/dimen_25_dip"
+            android:layout_height="@dimen/dimen_25_dip"
             android:layout_gravity="center"
-            android:background="@drawable/main_add_expense_quickly_new"
-            android:gravity="center"
-            android:shadowColor="@color/black"
-            android:shadowDx="0.0"
-            android:shadowDy="2.0"
-            android:shadowRadius="1.0"
-            android:text="查询"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_15_dip"
-            android:textStyle="bold" />
+            android:layout_marginLeft="@dimen/dimen_10_dip"
+            android:background="@drawable/search_clear"
+            android:visibility="invisible" />
     </LinearLayout>
     
     <ListView 
