--- a/res/layout/activity_srtview.xml
+++ b/res/layout/activity_srtview.xml
@@ -4,16 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp" >
+    android:padding="5dp" >
 
     <TextView
         android:id="@+id/chs_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:maxLines="5"
+        android:maxLines="3"
         android:minLines="2"
-        android:text="Hi 我是百度语音合成，请输入要合成的英文语音内容"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="25dip" />
 
@@ -22,9 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:maxLines="5"
+        android:maxLines="3"
         android:minLines="2"
-        android:text="Hi 我是百度语音合成，请输入要合成的中文语音内容"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="25dip" />
 
@@ -138,6 +138,41 @@
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_15_dip"
             android:textStyle="bold" />
+         <Button
+            android:id="@+id/btnUpdateId"
+            android:layout_width="60dp"
+            android:layout_height="@dimen/dimen_60_dip"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/dimen_5_dip"
+            android:background="@drawable/main_add_expense_quickly_new"
+            android:gravity="center"
+            android:paddingBottom="@dimen/dimen_6_dip"
+            android:shadowColor="@color/black"
+            android:shadowDx="0.0"
+            android:shadowDy="2.0"
+            android:shadowRadius="1.0"
+            android:text="更新ID"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_15_dip"
+            android:textStyle="bold" />
     </LinearLayout>
-
+	<TextView
+        android:id="@+id/topictip_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:maxLines="5"
+        android:minLines="2"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="25dip" /><TextView
+        android:id="@+id/eng_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:maxLines="5"
+        android:minLines="2"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="25dip" />
 </LinearLayout>
