--- a/res/layout/activity_videotest.xml
+++ b/res/layout/activity_videotest.xml
@@ -63,7 +63,7 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="3dp"
-                android:background="@drawable/full_screen"
+                android:background="@drawable/icon_video_full_screen"
                 android:scaleType="fitXY" />
 
             <TextView
@@ -102,7 +102,7 @@
             android:layout_marginBottom="10dp"
             android:background="#00000000"
             android:gravity="center"
-            android:text="text"
+            android:text=""
             android:textColor="@+color/white"
             android:textSize="20dp" />
 
@@ -176,7 +176,13 @@
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/bfq_replay"
                 android:scaleType="fitXY" />
-
+			<ImageButton
+                android:id="@+id/imgbutton_hide_vchs"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="3dp"
+                android:background="@drawable/icon_eye_open4v"
+                android:scaleType="fitXY" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
