重新设计Main和Srt两个界面, 变得更简洁

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,45 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp" >
 
-   <LinearLayout
+    <Gallery
+        android:id="@+id/seasons_gallery"
         android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.8"
+        android:spacing="10dp" />
+
+    <Button
+        android:id="@+id/myfav_bt"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-		<TextView 
-		    android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="打开字幕"
-		    />
-        <Gallery
-            android:id="@+id/seasons_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:spacing="10dp"
-            android:layout_weight="0.9"
-             />
-        
-         <Button
-            android:id="@+id/tosrt_bt"
-            android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="进入"
-            />
-  </LinearLayout>
-  
-   <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
-        <Button
-            android:id="@+id/myfav_bt"
-            android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="我的收藏"
-            />
-   </LinearLayout>
+        android:visibility="gone"
+        android:text="我的收藏" />
 
 </LinearLayout>
